--- a/PomodoroTimer/PomodoroTimer/Info.plist
+++ b/PomodoroTimer/PomodoroTimer/Info.plist
@@ -32,6 +32,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
+		<string>fetch</string>
 		<string>processing</string>
 	</array>
 	<key>UILaunchScreen</key>
